feat: PatientController + api-requests (GET) from H2 database

--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.profiles.active=default
+# Uncomment the line below to enable the H2 console
+
 spring.application.name=patient-service
 
 spring.h2.console.path=/h2-console
